# ffmpeg-mangler

./: .gitignore  Cargo.toml  mangle_audio.sh  mangle_settings.sh  mangle_video.sh  mangle_video_without_audio.sh  readme.md
bash/: mangle_settings.sh  mangle_video_without_audio.sh
src/: main.rs  prelude.rs
