[package]
name = "media-mangler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27.2", features = ["serde"] }
rfd = "0.14.1"
keystone = { git = "https://github.com/noxmore/keystone.git" }
fastrand = "2.0.2"
shlex = "1.3.0"
egui_extras = { version = "0.27.2", features = ["image"] }
wait-timeout = "0.2.0"
